// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setResolvedConnection accepts only database connections 1`] = `"Invalid connection type. Only database connections can be resolved with a custom resolver."`;

exports[`setResolvedConnection sets the connection 1`] = `
[
  "m",
  "resolvedConnection",
  Immutable.Map {
    "type": "database",
    "name": "bar",
  },
]
`;

exports[`setResolvedConnection sets undefined when is called with undefined 1`] = `
[
  "m",
  "resolvedConnection",
  undefined,
]
`;

exports[`setResolvedConnection validates format 1`] = `"Invalid connection object. The resolved connection must look like: \`{ type: "database", name: "connection name" }\`."`;

exports[`setResolvedConnection validates format 2`] = `"Invalid connection object. The resolved connection must look like: \`{ type: "database", name: "connection name" }\`."`;

exports[`setResolvedConnection validates format 3`] = `"Invalid connection object. The resolved connection must look like: \`{ type: "database", name: "connection name" }\`."`;

exports[`setup should work with redirect:false and responseType:id_token 1`] = `
{
  "allowedConnections": [],
  "auth": {
    "audience": undefined,
    "autoParseHash": true,
    "connectionScopes": {},
    "nonce": undefined,
    "params": {
      "scope": "openid profile email",
    },
    "redirect": false,
    "redirectUrl": "http://localhost/",
    "responseMode": undefined,
    "responseType": "id_token",
    "sso": true,
    "state": undefined,
  },
  "clientBaseUrl": "https://domain",
  "clientID": "clientID",
  "connectionResolver": undefined,
  "defaultADUsernameFromEmailPrefix": true,
  "domain": "domain",
  "emitEventFn": "emitEventFn",
  "handleEventFn": "handleEventFn",
  "hashCleanup": true,
  "hookRunner": "hookRunner",
  "hooks": {},
  "languageBaseUrl": "https://cdn.auth0.com",
  "prefill": {},
  "tenantBaseUrl": "https://domain/info-v1.js",
  "ui": {
    "allowAutocomplete": false,
    "allowPasswordAutocomplete": false,
    "allowShowPassword": false,
    "appendContainer": true,
    "authButtonsTheme": {},
    "autoclose": false,
    "autofocus": true,
    "avatar": true,
    "avatarProvider": {
      "displayName": [Function],
      "url": [Function],
    },
    "closable": true,
    "containerID": "auth0-lock-container-id",
    "dict": {},
    "disableWarnings": false,
    "forceAutoHeight": false,
    "hideMainScreenTitle": false,
    "labeledSubmitButton": true,
    "language": "en",
    "logo": undefined,
    "mobile": false,
    "popupOptions": {},
    "preferConnectionDisplayName": false,
    "primaryColor": undefined,
    "rememberLastLogin": true,
    "scrollGlobalMessagesIntoView": true,
  },
  "useCustomPasswordlessConnection": false,
  "useTenantInfo": false,
}
`;
